所有的静态页面已经写完

--- a/Wxm/wang/my_pc/public/css/header.css
+++ b/Wxm/wang/my_pc/public/css/header.css
@@ -269,8 +269,8 @@ margin-left: 25px;
     display: block;
 }
 
-/* .beast-menu :hover .beast-menu__content { 
+.beast-menu :hover .beast-menu__content { 
  height:280px; 
  transition:all .3s linear .3s ; 
- }  */
+ }  
 
